[gd_scene load_steps=63 format=3 uid="uid://kpdaiki4cghe"]

[ext_resource type="PackedScene" uid="uid://bmxh341y6k0ri" path="res://game/components/entity_base.tscn" id="1_3wi2h"]
[ext_resource type="Texture2D" uid="uid://513wxmkpa3hg" path="res://assets/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Soldier/Soldier/Soldier-Attack01.png" id="2_4gnol"]
[ext_resource type="Script" path="res://game/game_object/player/player_from_entity.gd" id="2_7euju"]
[ext_resource type="Texture2D" uid="uid://ctnhy31c15nig" path="res://assets/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Soldier/Soldier with shadows/Soldier-Hurt.png" id="3_un5rc"]
[ext_resource type="Texture2D" uid="uid://csru16t04yv4x" path="res://assets/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="4_cpkjj"]
[ext_resource type="Texture2D" uid="uid://35nh5kybbba7" path="res://assets/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Soldier/Soldier with shadows/Soldier-Attack03.png" id="4_rrw41"]
[ext_resource type="Texture2D" uid="uid://dsff8tdqwgk20" path="res://assets/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Soldier/Soldier/Soldier-Walk.png" id="5_68tye"]
[ext_resource type="PackedScene" uid="uid://u3oxgrkr6rof" path="res://game/components/random_stream_player_2d_component.tscn" id="8_1wub7"]
[ext_resource type="AudioStream" uid="uid://cpway4ajitt5q" path="res://assets/audio/impactMining_000.ogg" id="9_hd0m7"]
[ext_resource type="AudioStream" uid="uid://dtwf65ib4e1xh" path="res://assets/audio/impactMining_001.ogg" id="10_y5c5d"]
[ext_resource type="AudioStream" uid="uid://dfryb08oyk0ds" path="res://assets/audio/impactMining_002.ogg" id="11_fmokc"]
[ext_resource type="AudioStream" uid="uid://uks5uxg5ktrn" path="res://assets/audio/impactMining_003.ogg" id="12_6y7b3"]
[ext_resource type="AudioStream" uid="uid://bsb3333qm6l22" path="res://assets/audio/impactMining_004.ogg" id="13_akivj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ot22c"]
radius = 3.93954

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apxhi"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_gnvpq"]
radius = 40.4317

[sub_resource type="AtlasTexture" id="AtlasTexture_v38sy"]
atlas = ExtResource("2_4gnol")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjnm5"]
atlas = ExtResource("2_4gnol")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vkq2"]
atlas = ExtResource("2_4gnol")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eos25"]
atlas = ExtResource("2_4gnol")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqukr"]
atlas = ExtResource("2_4gnol")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyts5"]
atlas = ExtResource("2_4gnol")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5raqv"]
atlas = ExtResource("4_rrw41")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0is0"]
atlas = ExtResource("4_rrw41")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkyam"]
atlas = ExtResource("4_rrw41")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w51r"]
atlas = ExtResource("4_rrw41")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mw8i"]
atlas = ExtResource("4_rrw41")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj7vf"]
atlas = ExtResource("4_rrw41")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_giay6"]
atlas = ExtResource("4_rrw41")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0x83"]
atlas = ExtResource("4_rrw41")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhxn1"]
atlas = ExtResource("4_rrw41")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3lda"]
atlas = ExtResource("3_un5rc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg0q0"]
atlas = ExtResource("3_un5rc")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j36ly"]
atlas = ExtResource("3_un5rc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5bwk"]
atlas = ExtResource("3_un5rc")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iibef"]
atlas = ExtResource("4_cpkjj")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ci7l"]
atlas = ExtResource("4_cpkjj")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s7jv"]
atlas = ExtResource("4_cpkjj")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7veur"]
atlas = ExtResource("4_cpkjj")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft6wr"]
atlas = ExtResource("4_cpkjj")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s3f5"]
atlas = ExtResource("4_cpkjj")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgrkh"]
atlas = ExtResource("5_68tye")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg220"]
atlas = ExtResource("5_68tye")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f5qt"]
atlas = ExtResource("5_68tye")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3gqc"]
atlas = ExtResource("5_68tye")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ibso"]
atlas = ExtResource("5_68tye")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ef6c"]
atlas = ExtResource("5_68tye")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y17f1"]
atlas = ExtResource("5_68tye")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3p4m"]
atlas = ExtResource("5_68tye")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_xf7bh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v38sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjnm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vkq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eos25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqukr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyts5")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5raqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0is0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkyam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w51r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mw8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj7vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giay6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0x83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhxn1")
}],
"loop": true,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3lda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg0q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j36ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5bwk")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iibef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ci7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7veur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft6wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s3f5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgrkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg220")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f5qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3gqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ibso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ef6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y17f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3p4m")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bp7dd"]
radius = 7.2
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33puq"]
size = Vector2(13, 19.2)

[sub_resource type="Animation" id="Animation_kcumg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/HurtBox/HurtBoxCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/HitBox/HitBoxCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4jgh1"]
resource_name = "attack1"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/HitBox/HitBoxCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.26, 0.46),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/HurtBox/HurtBoxCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dmhti"]
resource_name = "attack2"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/HitBox/HitBoxCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/HurtBox/HurtBoxCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_players_arrow"
}]
}

[sub_resource type="Animation" id="Animation_r0y4o"]
resource_name = "hurt"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/HurtBox/HurtBoxCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/HitBox/HitBoxCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ngdur"]
resource_name = "idle"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/HurtBox/HurtBoxCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/HitBox/HitBoxCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0xnve"]
resource_name = "walk"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/HurtBox/HurtBoxCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/HitBox/HitBoxCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wy8b8"]
_data = {
"RESET": SubResource("Animation_kcumg"),
"attack1": SubResource("Animation_4jgh1"),
"attack2": SubResource("Animation_dmhti"),
"hurt": SubResource("Animation_r0y4o"),
"idle": SubResource("Animation_ngdur"),
"walk": SubResource("Animation_0xnve")
}

[sub_resource type="Animation" id="Animation_y3o2g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2fvll"]
resource_name = "hurt"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.0980392, 0.0901961, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhp5a"]
_data = {
"RESET": SubResource("Animation_y3o2g"),
"hurt": SubResource("Animation_2fvll")
}

[node name="Player" instance=ExtResource("1_3wi2h")]
collision_layer = 1
collision_mask = 6
script = ExtResource("2_7euju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2(1.2, 6)
shape = SubResource("CircleShape2D_ot22c")

[node name="HealthBar" type="ProgressBar" parent="." index="2"]
z_index = 1
y_sort_enabled = true
custom_minimum_size = Vector2(30, 6)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -14.8
offset_top = -18.0
offset_right = 15.2
offset_bottom = -12.0
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_apxhi")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickUpArea2D" type="Area2D" parent="." index="3"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea2D" index="0"]
shape = SubResource("CircleShape2D_gnvpq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Root" index="0"]
texture_filter = 1
position = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_xf7bh")
animation = &"idle"
frame = 5

[node name="HurtBox" parent="Root" index="1"]
collision_layer = 8

[node name="HurtBoxCollisionShape2D" type="CollisionShape2D" parent="Root/HurtBox" index="0"]
shape = SubResource("CapsuleShape2D_bp7dd")
disabled = true

[node name="HitBox" parent="Root" index="2"]
position = Vector2(14.8, 0)
collision_mask = 16

[node name="HitBoxCollisionShape2D" type="CollisionShape2D" parent="Root/HitBox" index="0"]
shape = SubResource("RectangleShape2D_33puq")
disabled = true

[node name="Health" parent="." index="5"]
max_health = 30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_wy8b8")
}

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="." index="7"]
libraries = {
"": SubResource("AnimationLibrary_uhp5a")
}

[node name="NoticeArea" parent="." index="8"]
visible = false
monitoring = false
monitorable = false

[node name="HealthRegenerationTimer" type="Timer" parent="." index="9"]
wait_time = 5.0
autostart = true

[node name="HitRandomStreamPlayer" parent="." index="10" instance=ExtResource("8_1wub7")]
streams = Array[AudioStream]([ExtResource("9_hd0m7"), ExtResource("10_y5c5d"), ExtResource("11_fmokc"), ExtResource("12_6y7b3"), ExtResource("13_akivj")])
